--- a/Demo 1/index.html
+++ b/Demo 1/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>Hello.</h1>
-<!--- <a href="https://www.google.com"> link </a>  -->
+<a href="https://www.google.com"> link </a>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
